python script fix sql update Now to home_branch

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # =====================
 # Database Config
 # =====================
-DB_HOST=192.168.1.124
+DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=smartfarm
 DB_USER=postgres
