python script dynamic camera list in env

--- a/.env.example
+++ b/.env.example
@@ -10,11 +10,8 @@ DB_PASS=
 # =====================
 # Camera Config
 # =====================
-CAMERA_1_NAME=CAMERA_1
-CAMERA_1_IP=192.168.1.168
-CAMERA_1_PORT=554
-CAMERA_1_RTSP=rtsp://@192.168.1.168:554/
 
+CAMERAS=CAMERA_1,rtsp://@192.168.1.168:554/;CAMERA_1,rtsp://@192.168.1.122:554/
 
 # =====================
 # App Config
